tests/codegen/fail/unsupported_async_projected_spawn_library_build.ql
async fn worker() -> Int {
    return 1
}

async fn helper() -> Int {
    let pair = (worker(), 1)
    spawn pair[0]
    return 0
}
