tests/codegen/fail/unsupported_async_projected_spawn_library_build.stderr
error: tests/codegen/fail/unsupported_async_projected_spawn_library_build.ql:7:5: LLVM IR backend foundation does not support field or index projections yet
      spawn pair[0]
      ^^^^^^^^
